<resources>
    <string name="app_name">KIDS APP</string>
    <string name="alphabet">Alphabet</string>
    <string name="number">Number</string>
    <string name="shape">Shape</string>
    <string name="direction">Direction</string>
    <string name="colors">Color</string>
    <string name="add_sub">Add and Sub</string>
    <string name="edit_text1">Enter Number 1</string>
    <string name="edit_text2">Enter Number 2</string>
    <string name="add_text">ADD</string>
    <string name="sub_text">SUB</string>

</resources>
