<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="3"
    android:background="@color/background_color"
    tools:context="com.example.dell.firstproject.MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/alphabetId"
            android:layout_weight="1"
            android:layout_width="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/circlebackground"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/alphabet_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_for_alphabet"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/alphabet"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/numberId"
            android:layout_weight="1"
            android:layout_width="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/circlebackground1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/number_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_for_number"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/number"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/directionId"
            android:layout_weight="1"
            android:layout_width="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/circlebackground2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/direction_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_for_direction"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/direction"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/shapeId"
            android:layout_weight="1"
            android:layout_width="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/traingularbackground"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/shape_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_for_shape"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/shape"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/colorId"
            android:layout_weight="1"
            android:layout_width="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/circlebackground3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/color_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_for_color"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/colors"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/Add_subId"
            android:layout_weight="1"
            android:layout_width="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/rectanglebackground"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/poem"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_for_add"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="Poem"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>


